# libemoji

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  wercker.yml
.circleci/: config.yml
.github/workflows/: test.yml
example/: main.c
include/: emoji.h
src/: CMakeLists.txt  EgGenerator.cpp  EgGenerator.h  EgLine.cpp  EgLine.h  emoji.cpp
